  keyword arguments (pull request ``#675``)
- Improved ``Rule.empty`` by providing a ```get_empty_kwargs`` to allow setting
  custom kwargs without having to override entire ``empty`` method. (pull
  request ``#675``)
- Fixed ```extra_files``` parameter for reloader to not cause startup
  to crash when included in server params

Version 0.10.1
--------------

(bugfix release, released on February 3rd 2015)

- Fixed regression with multiple query values for URLs (pull request ``#667``).
- Fix issues with eventlet's monkeypatching and the builtin server (pull
  request ``#663``).

Version 0.10
------------

Released on January 30th 2015, codename Bagger.

- Changed the error handling of and improved testsuite for the caches in
  ``contrib.cache``.
- Fixed a bug on Python 3 when creating adhoc ssl contexts, due to `sys.maxint`
  not being defined.
- Fixed a bug on Python 3, that caused
  :func:`~werkzeug.serving.make_ssl_devcert` to fail with an exception.
- Added exceptions for 504 and 505.
- Added support for ChromeOS detection.
- Added UUID converter to the routing system.
- Added message that explains how to quit the server.
- Fixed a bug on Python 2, that caused ``len`` for
  :class:`werkzeug.datastructures.CombinedMultiDict` to crash.
- Added support for stdlib pbkdf2 hmac if a compatible digest
  is found.
- Ported testsuite to use ``py.test``.
- Minor optimizations to various middlewares (pull requests ``#496`` and
  ``#571``).
- Use stdlib ``ssl`` module instead of ``OpenSSL`` for the builtin server
  (issue ``#434``). This means that OpenSSL contexts are not supported anymore,
  but instead ``ssl.SSLContext`` from the stdlib.
- Allow protocol-relative URLs when building external URLs.
- Fixed Atom syndication to print time zone offset for tz-aware datetime
  objects (pull request ``#254``).
- Improved reloader to track added files and to recover from broken
  sys.modules setups with syntax errors in packages.